# videoinfo

./: .gitignore  LICENSE  readme.md
doc/: readme.md
project/lib/: invoke.bat  invoke_mingw.bat  invoke_vs2015.bat
project/lib/common/: env.bat
src/: CMakeLists.txt  main.cpp  test.cpp
